@@ -2,6 +2,7 @@ ver 0.2.3
 - Fixed errors when using non-ascii characters in labels.
 - Fixed an error when a command requires more components for arguments.
 - Fixed some examples that will raise the command error.
+- Fixed an error when executing the default command.
 - Used hash instead of label in gui_config.json
 - Removed unnecessary codes from wxWidgets to reduce the binary size.
 
